--- a/Formulario.html
+++ b/Formulario.html
@@ -7,6 +7,8 @@
     <title>CONTACTO</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="estilos.css">
+    <script src="js/Validarjs.js"></script>
+
 </head>
 <body>
     <div class="menu">
@@ -32,13 +34,17 @@
        </div>      
     </div>
     <div class="container borde">
-        <form action="" >
+      <form name="formulario" id="formulario" method="get" action="#" onSubmit="return valida();">
         <div class="row g-3">
             <div class="col-xs-20 col-sm-6">
                 <div class="form-group">
                 <h3>Formulario De Contacto</h3>
                 <label for="" >Nombre</label>
-                 <input type="text" class="form-control" placeholder="Ingrese nombre y apellido" required>
+                 <input type="text" name="nombre" id="nombre"  class="form-control" placeholder="Ingrese nombre y apellido">
+                 <label for="" >Rut</label>
+                 <input type="text" class="form-control"  placeholder="Ingrese Rut" required >
+                 <label for="" >Telefono</label>
+                 <input type="tel" name="rut" id="rut" class="form-control" placeholder="Ingrese Telefono de contacto" required>
                 <label for="exampleInputEmail1">Correo Electrónico</label>
                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="nombre@ejemplo.cl" required>
                 <label for="">Categoría Camiseta</label>
@@ -54,8 +60,8 @@
                  <input type="radio" class="form-check-input"  id="r1" name="os"><label for="">Si</label>
                  <input type="radio" class="form-check-input" id="r2" name="os"><label for="">No</label><br>
                  <label for="">Mensaje</label>
-                 <textarea name="" id="" cols="30" rows="5" class="form-control" placeholder="Indique su consulta de stock, tiendas, horarios, etc" required></textarea>
-                 <input class="form-check-input" type="checkbox" id="gridCheck">
+                 <textarea cols="30" rows="5" class="form-control" placeholder="Indique su consulta de stock, tiendas, horarios, etc" required ></textarea>
+                 <input class="form-check-input" type="checkbox" name="txt_mje" id="txt_mje">
                  <label for="">Envíeme una copia</label><br>
                  <label for="">&nbsp &nbsp &nbsp(Opcional)</label><br>
                  <br>
